--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.272.0",
+        "changelog": "Mobile: shift widget 10% right, increase breakpoint to 1024px for landscape phones.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.272.0/jellyfin-plugin-ratings_1.0.272.0.zip",
+        "checksum": "2530c6d48ecde9f797d0e0cd3e757ce5",
+        "timestamp": "2026-02-12T15:00:00Z"
+      },
+      {
         "version": "1.0.271.0",
         "changelog": "Mobile: center widget horizontally on screen. Remove poster detection and debug logs.",
         "targetAbi": "10.11.0.0",
