--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.273.0",
+        "changelog": "Mobile widget position adjusted to left: 55%.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.273.0/jellyfin-plugin-ratings_1.0.273.0.zip",
+        "checksum": "143f35dddba6a711057a9099904bd24d",
+        "timestamp": "2026-02-12T15:30:00Z"
+      },
+      {
         "version": "1.0.272.0",
         "changelog": "Mobile: shift widget 10% right, increase breakpoint to 1024px for landscape phones.",
         "targetAbi": "10.11.0.0",
