--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.278.0",
+        "changelog": "Fix chat: online count API endpoint, input CSS layout, load users immediately on open.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.278.0/jellyfin-plugin-ratings_1.0.278.0.zip",
+        "checksum": "6e6c6a081f2a65c825d9d94e49087c03",
+        "timestamp": "2026-02-15T19:00:00Z"
+      },
+      {
         "version": "1.0.277.0",
         "changelog": "Fix chat settings not exposed in API config endpoint - chat button now appears when enabled.",
         "targetAbi": "10.11.0.0",
@@ -79,14 +87,6 @@
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.249.0/jellyfin-plugin-ratings_1.0.249.0.zip",
         "checksum": "69a46afa2c2cc8812a778d132e5dbd02",
         "timestamp": "2026-02-09T13:00:00Z"
-      },
-      {
-        "version": "1.0.248.0",
-        "changelog": "Ask to Delete: Users can request deletion of fulfilled media. Admins see a new Deletion Requests tab with schedule options.",
-        "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.248.0/jellyfin-plugin-ratings_1.0.248.0.zip",
-        "checksum": "58c77f290a9731606c612f7a688d60ff",
-        "timestamp": "2026-02-09T12:00:00Z"
       }
     ]
   }
