--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.283.0",
+        "changelog": "Fix chat messages not rendering: use camelCase property names, add isAdmin/isModerator to messages.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.283.0/jellyfin-plugin-ratings_1.0.283.0.zip",
+        "checksum": "4fecee26a07a6495da0a74b3e9b5ac17",
+        "timestamp": "2026-02-15T21:00:00Z"
+      },
+      {
         "version": "1.0.282.0",
         "changelog": "Fix chat 401: Pass X-Emby-Authorization header with token in all chat API calls.",
         "targetAbi": "10.11.0.0",
@@ -79,14 +87,6 @@
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.274.0/jellyfin-plugin-ratings_1.0.274.0.zip",
         "checksum": "7bbe9ef9bdf741f7ab29fd67cef31cc3",
         "timestamp": "2026-02-15T16:15:00Z"
-      },
-      {
-        "version": "1.0.273.0",
-        "changelog": "Settings redesign, badge display profiles with H/V axis, rating widget repositioned above detail ribbon with responsive mobile layout.",
-        "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.273.0/jellyfin-plugin-ratings_1.0.273.0.zip",
-        "checksum": "143f35dddba6a711057a9099904bd24d",
-        "timestamp": "2026-02-12T15:30:00Z"
       }
     ]
   }
