--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.285.0",
+        "changelog": "Debug chat: Add console logging to trace message send/load flow.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.285.0/jellyfin-plugin-ratings_1.0.285.0.zip",
+        "checksum": "d6c026c9b0163fc99682492b95d61c3f",
+        "timestamp": "2026-02-15T21:30:00Z"
+      },
+      {
         "version": "1.0.284.0",
         "changelog": "Fix chat: improve message send handler with delayed reload, better error handling.",
         "targetAbi": "10.11.0.0",
@@ -79,14 +87,6 @@
         "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.276.0/jellyfin-plugin-ratings_1.0.276.0.zip",
         "checksum": "04ecf431262775958a87f377b09ff69c",
         "timestamp": "2026-02-15T18:00:00Z"
-      },
-      {
-        "version": "1.0.275.0",
-        "changelog": "Live Chat: Real-time chat for connected users with emoji picker, GIF support (Tenor), moderator system, user banning, admin clear all. Chat replaces Cast button in header.",
-        "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.275.0/jellyfin-plugin-ratings_1.0.275.0.zip",
-        "checksum": "483dbf98060c8e7b05b9790738d74482",
-        "timestamp": "2026-02-15T17:00:00Z"
       }
     ]
   }
