--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.301.0",
+        "changelog": "Chat notification improvements.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.301.0/jellyfin-plugin-ratings_1.0.301.0.zip",
+        "checksum": "0e73f086f17563deaaa85a4bcbee937a",
+        "timestamp": "2026-02-18T18:45:00Z"
+      },
+      {
         "version": "1.0.300.0",
         "changelog": "Chat improvements and UI polish.",
         "targetAbi": "10.11.0.0",
