--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.302.0",
+        "changelog": "Chat notification improvements.",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.302.0/jellyfin-plugin-ratings_1.0.302.0.zip",
+        "checksum": "137264ebb45958aa3b7fc078e7aa5e0d",
+        "timestamp": "2026-02-18T19:00:00Z"
+      },
+      {
         "version": "1.0.301.0",
         "changelog": "Chat notification improvements.",
         "targetAbi": "10.11.0.0",
