--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
-        "version": "2.0.6.0",
-        "changelog": "Fix: GIF search 401 error - add auth header to requests",
+        "version": "2.0.7.0",
+        "changelog": "Fix: GIF search now supports both Tenor and Klipy APIs with fallback",
         "targetAbi": "10.11.0.0",
-        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.6.0/jellyfin-plugin-ratings_2.0.6.0.zip",
-        "checksum": "2a33f85819fb19fa9d3f6def7e599c82",
-        "timestamp": "2026-02-19T21:30:00Z"
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.7.0/jellyfin-plugin-ratings_2.0.7.0.zip",
+        "checksum": "b631b29908ec1c82ad5768e0a77a93e0",
+        "timestamp": "2026-02-19T22:00:00Z"
       }
     ]
   }
