--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.25.0",
+        "changelog": "Fixes: moderator list display, toast notifications for all actions, larger panel (900x850), mobile responsive layout",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.25.0/jellyfin-plugin-ratings_2.0.25.0.zip",
+        "checksum": "d4d5bc3b57af14a4bf1e7cc39ba80dd2",
+        "timestamp": "2026-02-24T22:15:00Z"
+      },
+      {
         "version": "2.0.24.0",
         "changelog": "Moderator Panel improvements: larger size, user search in Manage tab, nickname/message color pickers, text style selection, admin filtering fix",
         "targetAbi": "10.11.0.0",
