--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.26.0",
+        "changelog": "Toast notifications working, system messages in chat for mod actions, ban list display fixed",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.26.0/jellyfin-plugin-ratings_2.0.26.0.zip",
+        "checksum": "671d40eb84d2b2c188af46eab38c2687",
+        "timestamp": "2026-02-24T22:35:00Z"
+      },
+      {
         "version": "2.0.25.0",
         "changelog": "Fixes: moderator list display, toast notifications for all actions, larger panel (900x850), mobile responsive layout",
         "targetAbi": "10.11.0.0",
