--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.29.0",
+        "changelog": "Fix: refresh action logs after penalties, pass userName correctly to avoid timing issues",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.29.0/jellyfin-plugin-ratings_2.0.29.0.zip",
+        "checksum": "e03babf01f64b44a75a57f28b20f1b7b",
+        "timestamp": "2026-02-25T17:25:00Z"
+      },
+      {
         "version": "2.0.28.0",
         "changelog": "Add missing formatDuration function",
         "targetAbi": "10.11.0.0",
