--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.30.0",
+        "changelog": "Debug: Add console logging for ban list loading to diagnose empty list issue",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.30.0/jellyfin-plugin-ratings_2.0.30.0.zip",
+        "checksum": "07adea7cfa1365a530bc47ab0eeeec3b",
+        "timestamp": "2026-02-25T19:00:00Z"
+      },
+      {
         "version": "2.0.29.0",
         "changelog": "Fix: refresh action logs after penalties, pass userName correctly to avoid timing issues",
         "targetAbi": "10.11.0.0",
