--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.33.0",
+        "changelog": "Fix: Null checks for old panel elements, action log shows duration/reason",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.33.0/jellyfin-plugin-ratings_2.0.33.0.zip",
+        "checksum": "f38368e390929e5c0030a6e83dbae95e",
+        "timestamp": "2026-02-25T20:08:00Z"
+      },
+      {
         "version": "2.0.32.0",
         "changelog": "Fix: Action logs PascalCase handling (was showing undefined/NaN)",
         "targetAbi": "10.11.0.0",
