--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.42.0",
+        "changelog": "Fix moderator level change API (query params) and require error",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.42.0/jellyfin-plugin-ratings_2.0.42.0.zip",
+        "checksum": "2997b60ab9129279b5876bc5b170a24b",
+        "timestamp": "2026-02-28T19:37:00Z"
+      },
+      {
         "version": "2.0.41.0",
         "changelog": "Info modals for style and moderator actions - shows details after applying changes",
         "targetAbi": "10.11.0.0",
