--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.43.0",
+        "changelog": "Debug logging for style API",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.43.0/jellyfin-plugin-ratings_2.0.43.0.zip",
+        "checksum": "6cb210c5f052639db66dad309ba99a36",
+        "timestamp": "2026-02-28T19:44:00Z"
+      },
+      {
         "version": "2.0.42.0",
         "changelog": "Fix moderator level change API (query params) and require error",
         "targetAbi": "10.11.0.0",
