--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.44.0",
+        "changelog": "Fix require errors, add modal debug logging",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.44.0/jellyfin-plugin-ratings_2.0.44.0.zip",
+        "checksum": "27edeb75f92d9e8d3eac3cae7880db31",
+        "timestamp": "2026-02-28T19:57:00Z"
+      },
+      {
         "version": "2.0.43.0",
         "changelog": "Debug logging for style API",
         "targetAbi": "10.11.0.0",
