--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.46.0",
+        "changelog": "Fix userId format mismatch for style lookup (with/without dashes)",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.46.0/jellyfin-plugin-ratings_2.0.46.0.zip",
+        "checksum": "38cbbc3d750f48e0f058e7f516cfa45d",
+        "timestamp": "2026-02-28T20:27:00Z"
+      },
+      {
         "version": "2.0.45.0",
         "changelog": "Refresh chat after style change to apply styles instantly",
         "targetAbi": "10.11.0.0",
