--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/dev/images/logo.png",
     "versions": [
       {
+        "version": "2.0.50.0",
+        "changelog": "Fix mod rate limiter memory leak, consistent 401/403 HTTP responses",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v2.0.50.0/jellyfin-plugin-ratings_2.0.50.0.zip",
+        "checksum": "1316124e6d09c21604627468d3c5da79",
+        "timestamp": "2026-02-28T23:35:00Z"
+      },
+      {
         "version": "2.0.49.0",
         "changelog": "Add RequireAuthAsync pattern - forgetting auth check now fails loudly instead of silently",
         "targetAbi": "10.11.0.0",
