--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/K3ntas/jellyfin-plugin-ratings/main/images/logo.png",
     "versions": [
       {
+        "version": "1.0.311.0",
+        "changelog": "Security hardening: auth checks, backup import sanitization, inline JS removal, regex optimization, rate limiting improvements",
+        "targetAbi": "10.11.0.0",
+        "sourceUrl": "https://github.com/K3ntas/jellyfin-plugin-ratings/releases/download/v1.0.311.0/jellyfin-plugin-ratings_1.0.311.0.zip",
+        "checksum": "f9a997f7a79abe8423d1c261f6340835",
+        "timestamp": "2026-02-28T23:50:00Z"
+      },
+      {
         "version": "1.0.310.0",
         "changelog": "Chat avatars, notification settings, server-side unread tracking, mobile view fixes",
         "targetAbi": "10.11.0.0",
